--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,7 @@
         <mat-icon>menu</mat-icon>
       </div>
       <img
+        routerLink="/"
         src="http://pngimg.com/uploads/amazon/amazon_PNG11.png"
         class="header_menu_logo"
         alt="logo"
@@ -16,14 +17,16 @@
         </div>
       </div>
       <div class="header_menu_signin">
-        <span class="header_menu_top_item">Hello, Sign In</span>
+        <span class="header_menu_top_item signin_link" routerLink="login"
+          >Hello, Sign In</span
+        >
         <span class="header_menu_bottom_item">Accounts & Lists</span>
       </div>
       <div class="header_menu_signin">
         <span class="header_menu_top_item">Returns</span>
         <span class="header_menu_bottom_item">& Orders</span>
       </div>
-      <div class="header_menu_cart">
+      <div class="header_menu_cart" routerLink="checkout">
         <mat-icon>shopping_cart</mat-icon>
         <p class="header_cart_number">{{ shoppingCart.getCartLength() }}</p>
       </div>
