Added (deleteEvent) to app-checkout-products to delete/remove items from DOM when deleted from checkout page

--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -8,9 +8,10 @@
       <p><strong>Shopping Cart</strong></p>
       <app-checkout-products
         [checkout_products]="items"
+        (deleteEvent)="deleteEventHandler($event)"
       ></app-checkout-products>
     </div>
   </div>
   <div class="checkout_right"></div>
-  <!-- <app-checkout-subtotal></app-checkout-subtotal> -->
+  <app-checkout-subtotal></app-checkout-subtotal>
 </div>
