--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,16 @@
         </div>
       </div>
       <div class="header_menu_signin">
-        <span class="header_menu_top_item signin_link" routerLink="login"
+        <span
+          (click)="signOut()"
+          class="header_menu_top_item signin_link"
+          *ngIf="auth.isLoggedIn()"
+          >Hello, {{ auth.getUser().split("@")[0].toUpperCase() }}</span
+        >
+        <span
+          class="header_menu_top_item signin_link"
+          *ngIf="!auth.isLoggedIn()"
+          routerLink="login"
           >Hello, Sign In</span
         >
         <span class="header_menu_bottom_item">Accounts & Lists</span>
