--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,28 @@
-<p>LOGIN PAGE</p>
+<div class="login">
+  <div class="login_container">
+    <img
+      routerLink="/"
+      class="login_logo"
+      src="https://th.bing.com/th/id/Rcbbbba2fedc09afae4acbd646696c5ff?rik=ADnI3qiuoNpLVA&riu=http%3a%2f%2fsmallbizdaily.com%2fwp-content%2fuploads%2f2015%2f04%2famazon-india.jpg&ehk=jah3nUQgvUIyu9JHU0bfJRSVHPRiCPwlV%2f9o6uzP5Rs%3d&risl=&pid=ImgRaw"
+    />
+    <!-- "https://logos-world.net/wp-content/uploads/2020/04/Amazon-Logo.png" -->
+
+    <div class="login_form">
+      <h1>Sign-In</h1>
+      <form action="" [formGroup]="loginForm">
+        <h5>Email</h5>
+        <input type="email" formControlName="email" />
+        <h5>Password</h5>
+        <input type="password" formControlName="password" />
+        <button class="login_signin_button" (click)="signIn()">Sign-In</button>
+        <p class="login_terms">
+          By continuing, you agree to Amazon's Conditions of Use and Privacy
+          Notice.
+        </p>
+        <button class="login_create_button" (click)="createAccount()">
+          Create your Amazon account
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
